--- a/css/estilos.css
+++ b/css/estilos.css
@@ -544,6 +544,14 @@ body {
     font-size: 0.8rem;
   }
 
+  .hero2__title {
+    font-size: 1.5rem;
+  }
+
+  .hero2__paragraph {
+    font-size: 0.8rem;
+  }
+
   .subtitle {
     font-size: 1.8rem;
   }
